[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-scripts"
version = "0.1.0"
description = "Common Python utility scripts"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
